--- a/assess.html
+++ b/assess.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Assess</title>
+    <title>Assess and plan</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -55,7 +55,7 @@
                                             <ul id="navigation">
                                                 <li><a  href="index.html">Home</a></li>
                                                 <li><a  href="learn.html">Learn</a></li>
-                                                <li><a  href="assess.html">Assess</a></li>
+                                                <li><a  href="assess.html">Assess & Plan</a></li>
                                                 <li><a  href="explore.html">Explore resources</a></li>
                                                 <li><a  href="cases.html">Case studies</a></li>
                                             </ul>
@@ -84,12 +84,12 @@
         <!-- header-end -->
 
     <!-- bradcam_area  -->
-    <div class="bradcam_area bradcam_bg_1">
+    <div class="bradcam_area bradcam_bg_2">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3>Learn</h3>
+                        <h3>Assess & Plan</h3>
                     </div>
                 </div>
             </div>
@@ -103,10 +103,13 @@
   		<div class="container box_1170">
   			<h3 class="text-heading">Assess your team</h3>
   			<p class="sample-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            The assessment and planning phase aims to help you move toward your data readiness goals. The data framework guides you through the main components
+            of data readiness humanitarian response and programs alongside a maturity matrix. Using this resource you can identify where your team
+            falls in terms of data readiness and gives you an idea of what it means to increase your capacity in those domains.
+
         <br><br>
 
-        <a href="https://docs.google.com/spreadsheets/d/1AmMyClgnGkMBR3y01qh9820TbM4K-jwIPpu0imrcRUM/edit?usp=sharing" class="genric-btn danger radius">Go to Framework</a>
+        <a href="https://docs.google.com/spreadsheets/d/1AmMyClgnGkMBR3y01qh9820TbM4K-jwIPpu0imrcRUM/edit?usp=sharing" class="genric-btn danger radius" target="_blank">Go to Framework</a>
 
 
       </div>
@@ -116,7 +119,8 @@
   		<div class="container box_1170">
   			<h3 class="text-heading">Using the framework</h3>
   			<p class="sample-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            <p> There is no "right" way to work through the framework. However, the following gives you the main steps to help you be successful in this journey.
+              Read the descriptions and tips below as you work through the assessment and planning phase.
         <br><br>
 
     <div class="section-top-border">
@@ -126,8 +130,10 @@
   					</div>
   					<div class="col-md-9 mt-sm-20">
               <h4 class="mb-30">Identify your team</h3>
-  						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Once you have a sense of what is in the framework, the next step is to identify your team. Who should be included as part of the assessment will depend on your goals, but generally,
+                you'll want to think through work with a project team or department.
+
+                <p>It could be project-specific (e.g. a community surveillance project) or a team that regularly works with data (e.g. the cash assistance team). Make sure you include people responsible for the different components in the data readiness framework.</p>
   					</div>
   				</div>
   			</div>
@@ -139,9 +145,9 @@
           </div>
           <div class="col-md-9 mt-sm-20">
             <h4 class="mb-30">Reflect and score</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
+              <p>With your team, go through the framework and rate yourselves from 1 (does not exist) to 4 (high performance). Use the descriptions to rate yourselves as objectively as possible.
+                Often, you'll find you may belong in two categories. If this happens, choose the level that best represents your team most of the time.</p>
+              <p> As you score yourselves, make notes as to why you chose that level. This can help you in the planning phase as you prioritize which areas to work on.</p>
         </div>
       </div>
 
@@ -152,8 +158,12 @@
           </div>
           <div class="col-md-9 mt-sm-20">
             <h4 class="mb-30">Review results and prioritize</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p> With your final scores, review your results and see where there may be areas of improvement. This stage takes a bit more thought and creativity -- which components are essential
+                for your project and/or department? Where is there the most room for improvement? Some additional things you may want to consider are broader organizational strategy, funding opportunities,
+                time constraints, and how transferable they are to other teams/departments.</p>
+
+              <p>If you need additional help getting started, consider focusing on the priority components in the learn page.</p>
+
           </div>
         </div>
       </div>
@@ -172,20 +182,21 @@
                             <h3 class="footer_title">
                                 About
                             </h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p>The data readiness toolkit is a roadmap and resource for the IFRC and National Societies to meet their data readiness goals.</p>
                         </div>
                     </div>
 
                     <div class="col-xl-2 col-md-6 col-lg-2">
                         <div class="footer_widget">
                             <h3 class="footer_title">
-                                ___
+
                             </h3>
                             <ul>
 
                             </ul>
                         </div>
                     </div>
+
                     <div class="col-xl-3 col-md-6 col-lg-3">
                         <div class="footer_widget">
                             <h3 class="footer_title">
@@ -194,7 +205,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="learn.html">Learn</a></li>
-                                <li><a href="assess.html">Asess</a></li>
+                                <li><a href="assess.html">Assess & plan</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
@@ -210,7 +221,7 @@
 
                             </form>
 
-                            <p class="newsletter_text">Feel free to contact us with any questions or comments.</p>
+                            <p class="newsletter_text">Contact us with any questions or comments.</p>
                         </div>
                     </div>
                 </div>
@@ -232,7 +243,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         </div>
     </footer>
     <!--/ footer end  -->
-    
+
   <!-- Modal -->
   <div class="modal fade custom_search_pop" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
