--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                         <ul id="navigation">
                                             <li><a  href="index.html">Home</a></li>
                                             <li><a  href="learn.html">Learn</a></li>
-                                            <li><a  href="assess.html">Assess</a></li>
+                                            <li><a  href="assess.html">Assess & plan</a></li>
                                             <li><a  href="explore.html">Explore resources</a></li>
                                             <li><a  href="cases.html">Case studies</a></li>
                                         </ul>
@@ -107,7 +107,7 @@
   		<div class="container box_1170">
   			<h3 class="text-heading">An overview of data readiness</h3>
   			<p class="sample-text">
-          In the Red Cross Red Crescent Movement context, data readiness is the ability of National Socities to use quality and timely information to influence operations and planning to respond effectively to disasters.
+          In the Red Cross Red Crescent Movement context, data readiness is the ability of National Societies to use quality and timely information to influence operations and planning to respond effectively to disasters.
   			</p>
   		</div>
   	</section>
@@ -116,8 +116,10 @@
       <div class="container box_1170">
         <h3 class="text-heading">Why it matters</h3>
         <p class="sample-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          The IFRC and National Societies are thinking more critically about data and how they can leverage it better to improve our work. Through data readiness, organizations will be equipped
+          to use quality and timely information to influence operations and planning, all with the goal of improving our ability to respond effectively to disasters.
         </p>
+
       </div>
     </section>
 
@@ -125,7 +127,9 @@
       <div class="container box_1170">
         <h3 class="text-heading">How to get there</h3>
         <p class="sample-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          There are many paths to becoming a data ready organization, but this toolkit lays out an easy-to-follow roadmap for data readiness for IFRC and National Societies.
+          Whether you're learning about data readiness or the first time, developing a strategy for your team, or putting together a project proposal this toolkit can help you meet those goals.
+          Just follow the steps below and get started.
         </p>
       </div>
     </section>
@@ -139,7 +143,8 @@
                         <div class="icon">
                             <img src="img/steps/step1.png" alt="">
                         </div>
-                        <h3>Learn</h3>
+                        <br>
+                        <h4><a href="learn.html">Learn the basics</a></h4>
                         <p>Learn more about data readiness and how it applies to our work in the humanitarian space.</p>
                     </div>
                 </div>
@@ -148,7 +153,8 @@
                         <div class="icon">
                             <img src="img/steps/step2.png" alt="">
                         </div>
-                        <h3>Assess</h3>
+                        <br>
+                        <h4><a href="assess.html">Assess and plan</a></h4>
                         <p>Assess your team using a data readiness maturity matrix and chart a way forward on your data readiness journey.</p>
                     </div>
                 </div>
@@ -157,8 +163,9 @@
                         <div class="icon">
                             <img src="img/steps/step3.png" alt="">
                         </div>
-                        <h3>Explore resources</h3>
-                        <p>Explore resources from the IFRC, National Socieities, and external sources to learn more about data readiness and try out tools.</p>
+                        <br>
+                        <h4><a href="explore.html">Explore resources</a></h4>
+                        <p>Explore resources from the IFRC, National Societies, and external sources to learn more about data readiness and try out tools.</p>
                     </div>
                 </div>
             </div>
@@ -177,20 +184,21 @@
                             <h3 class="footer_title">
                                 About
                             </h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p>The data readiness toolkit is a roadmap and resource for the IFRC and National Societies to meet their data readiness goals.</p>
                         </div>
                     </div>
 
                     <div class="col-xl-2 col-md-6 col-lg-2">
                         <div class="footer_widget">
                             <h3 class="footer_title">
-                                ___
+
                             </h3>
                             <ul>
 
                             </ul>
                         </div>
                     </div>
+
                     <div class="col-xl-3 col-md-6 col-lg-3">
                         <div class="footer_widget">
                             <h3 class="footer_title">
@@ -199,7 +207,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="learn.html">Learn</a></li>
-                                <li><a href="assess.html">Asess</a></li>
+                                <li><a href="assess.html">Assess & plan</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
@@ -215,7 +223,7 @@
 
                             </form>
 
-                            <p class="newsletter_text">Feel free to contact us with any questions or comments.</p>
+                            <p class="newsletter_text">Contact us with any questions or comments.</p>
                         </div>
                     </div>
                 </div>
@@ -237,7 +245,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         </div>
     </footer>
     <!--/ footer end  -->
-    
+
 <!-- Button trigger modal -->
 
   <!-- Modal -->
