--- a/learn.html
+++ b/learn.html
@@ -55,7 +55,7 @@
                                             <ul id="navigation">
                                                 <li><a  href="index.html">Home</a></li>
                                                 <li><a  href="learn.html">Learn</a></li>
-                                                <li><a  href="assess.html">Assess</a></li>
+                                                <li><a  href="assess.html">Assess & Plan</a></li>
                                                 <li><a  href="explore.html">Explore resources</a></li>
                                                 <li><a  href="cases.html">Case studies</a></li>
                                             </ul>
@@ -103,7 +103,7 @@
   		<div class="container box_1170">
   			<h3 class="text-heading">An overview of data readiness</h3>
   			<p class="sample-text">
-          In the Red Cross Red Crescent Movement context, data readiness is the ability of National Socities to use quality and timely information to influence operations and planning to respond effectively to disasters.
+          In the Red Cross Red Crescent Movement context, data readiness is the ability of National Societies  to use quality and timely information to influence operations and planning to respond effectively to disasters.
   			</p>
         <p>Below describes the three main components of data readiness.</p>
   		</div>
@@ -120,7 +120,7 @@
                             <img src="img/components/dr-1.png" alt="">
                         </div>
                         <div class="service_info">
-                            <h4><a href="service_details.html">Data Literacy</a></h3>
+                            <h4>Data Literacy</h4>
                             <p>Data Literacy includes the skills, knowledge, attitudes, and social structures required for different populations to use data.</p>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                             <img src="img/components/dr-2.png" alt="">
                         </div>
                         <div class="service_info">
-                            <h4><a href="service_details.html">Data Preparedness</a></h3>
+                            <h4>Data Preparedness</h4>
                             <p>Data Preparedness includes the ability to responsibly and effectively deploy and manage data collection and analysis tools, techniques and strategies in a specific operational context before a disaster strikes.</p>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                             <img src="img/components/dr-3.png" alt="">
                         </div>
                         <div class="service_info">
-                            <h4><a href="service_details.html">Operational IM</a></h3>
+                            <h4>Operational IM</h4>
                             <p>Operational IM includes the ability to use data for response operation decisions and have reliably integrated data into both design and implementation.</p>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
           To meet the main objectives under data readiness, there are a number of competencies a team needs to have.
           These range everywhere from building a data culture, to having the right data collection tools, to making data-driven decisions.
   			</p>
-        <p>Explore the different competenices below.</p>
+        <p>Explore the different competencies below.</p>
   		</div>
   	</section>
 
@@ -171,38 +171,38 @@
                 <div class="col-xl-12">
                     <div class="service_active owl-carousel">
                         <div class="single_service">
-                            <div class="thumb">
+                            <div class="thumb_2">
                                 <img src="img/learn-svg/noun_Book_450657.svg" alt="">
                             </div>
                             <div class="service_info">
-                                <h4><a href="service_details.html">Data literacy skills</a></h3>
+                                <h4>Data literacy skills</h4>
                                 <p>Skills and capacity to collect, clean, store, and interpret.</p>
                             </div>
                         </div>
                         <div class="single_service">
-                            <div class="thumb">
+                            <div class="thumb_2">
                                 <img src="img/learn-svg/noun_mobile phone_3031624.svg" alt="">
                             </div>
                             <div class="service_info">
-                                <h4><a href="service_details.html">Data collection systems</a></h3>
+                                <h4>Data collection systems</h4>
                                 <p>Ability to collect information from individuals and groups, including surveys, procedures, and equipment.</p>
                             </div>
                         </div>
                         <div class="single_service">
-                            <div class="thumb">
+                            <div class="thumb_2">
                                 <img src="img/learn-svg/noun_Data Sharing_332305.svg" alt="">
                             </div>
                             <div class="service_info">
-                                <h4><a href="service_details.html">Data sharing</a></h3>
-                                <p>Having a system for active exchange of information, including: internally, between organizations, and in the public domain..</p>
+                                <h4>Data sharing</h4>
+                                <p>Having a system for active exchange of information, including: internally, between organizations, and in the public domain.</p>
                             </div>
                         </div>
                         <div class="single_service">
-                            <div class="thumb">
+                            <div class="thumb_2">
                                 <img src="img/learn-svg/noun_data collection_2339813.svg" alt="">
                             </div>
                             <div class="service_info">
-                                <h4><a href="service_details.html">Data collection (II)</a></h3>
+                                <h4>Data collection (II)</h4>
                                 <p>The capacity to collect additional information needed for an operation (e.g. rapid assessments) to complement existing secondary data.</p>
                             </div>
                         </div>
@@ -216,10 +216,10 @@
       <div class="container box_1170">
         <h3 class="text-heading">Theory of change</h3>
         <p class="sample-text">
-          All the components and priority competenices are part of a broader Theory of Change (ToC) on data readiness for operaitons and planning.
-          If you're interested, go ahead and review the ToC. You can use it for proposal writing, program planning, or anything else.
+          All the components and priority competencies are part of a broader Theory of Change (ToC) on data readiness for operations and planning.
+          If you're interested, go ahead and review the ToC. You can use it as a reference for learning, strategy development, proposal writing, or anything else.
           <br><br>
-          <a href="https://drive.google.com/file/d/1ia5sY-J1FCr9EJHnK2nYL7fxENqiWo2W/view?usp=sharing" class="genric-btn danger radius">Go to ToC</a>
+          <a href="https://drive.google.com/file/d/1ia5sY-J1FCr9EJHnK2nYL7fxENqiWo2W/view?usp=sharing" class="genric-btn danger radius" target="_blank">Go to ToC</a>
         </p>
 
       </div>
@@ -236,20 +236,21 @@
                             <h3 class="footer_title">
                                 About
                             </h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p>The data readiness toolkit is a roadmap and resource for the IFRC and National Societies to meet their data readiness goals.</p>
                         </div>
                     </div>
 
                     <div class="col-xl-2 col-md-6 col-lg-2">
                         <div class="footer_widget">
                             <h3 class="footer_title">
-                                ___
+
                             </h3>
                             <ul>
 
                             </ul>
                         </div>
                     </div>
+
                     <div class="col-xl-3 col-md-6 col-lg-3">
                         <div class="footer_widget">
                             <h3 class="footer_title">
@@ -258,7 +259,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="learn.html">Learn</a></li>
-                                <li><a href="assess.html">Asess</a></li>
+                                <li><a href="assess.html">Assess & plan</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
@@ -274,7 +275,7 @@
 
                             </form>
 
-                            <p class="newsletter_text">Feel free to contact us with any questions or comments.</p>
+                            <p class="newsletter_text">Contact us with any questions or comments.</p>
                         </div>
                     </div>
                 </div>
