--- a/cases.html
+++ b/cases.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Transportion</title>
+    <title>Case studies</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -54,7 +54,7 @@
                                             <ul id="navigation">
                                                 <li><a  href="index.html">Home</a></li>
                                                 <li><a  href="learn.html">Learn</a></li>
-                                                <li><a  href="assess.html">Assess</a></li>
+                                                <li><a  href="assess.html">Assess & Plan</a></li>
                                                 <li><a  href="explore.html">Explore resources</a></li>
                                                 <li><a  href="cases.html">Case studies</a></li>
                                             </ul>
@@ -83,7 +83,7 @@
         <!-- header-end -->
 
     <!-- bradcam_area  -->
-    <div class="bradcam_area bradcam_bg_1">
+    <div class="bradcam_area bradcam_bg_4">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12">
@@ -115,9 +115,9 @@
 
                             </p>
                             <ul>
-                                <li> Data ecoysystem. </li>
-                                <li> Data collection (I). </li>
-                                <li> Data sharing.</li>
+                                <li> Data ecosystem</li>
+                                <li> Secondary data</li>
+                                <li> Data sharing</li>
                             </ul>
 
                             <div class="about_btn">
@@ -131,8 +131,6 @@
     </div>
     <!--/ chose_area  -->
 
-
-
     <!-- footer start -->
     <footer class="footer">
         <div class="footer_top">
@@ -143,20 +141,21 @@
                             <h3 class="footer_title">
                                 About
                             </h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p>The data readiness toolkit is a roadmap and resource for the IFRC and National Societies to meet their data readiness goals.</p>
                         </div>
                     </div>
 
                     <div class="col-xl-2 col-md-6 col-lg-2">
                         <div class="footer_widget">
                             <h3 class="footer_title">
-                                ___
+
                             </h3>
                             <ul>
 
                             </ul>
                         </div>
                     </div>
+
                     <div class="col-xl-3 col-md-6 col-lg-3">
                         <div class="footer_widget">
                             <h3 class="footer_title">
@@ -165,7 +164,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="learn.html">Learn</a></li>
-                                <li><a href="assess.html">Asess</a></li>
+                                <li><a href="assess.html">Assess & plan</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
@@ -181,7 +180,7 @@
 
                             </form>
 
-                            <p class="newsletter_text">Feel free to contact us with any questions or comments.</p>
+                            <p class="newsletter_text">Contact us with any questions or comments.</p>
                         </div>
                     </div>
                 </div>
