--- a/learn.html
+++ b/learn.html
@@ -98,6 +98,19 @@
     <!--/ bradcam_area  -->
 
 
+
+    <br><br>
+  	<section class="sample-text-area">
+  		<div class="container box_1170">
+  			<h3 class="text-heading">Intro Video</h3>
+  			<p class="sample-text">
+          Watch this presentation for a brief overview of data readiness.</p>
+
+          <video src="video/intro-2.mp4" width="480" controls>
+</video>
+  		</div>
+  	</section>
+
     <br><br>
   	<section class="sample-text-area">
   		<div class="container box_1170">
@@ -202,7 +215,7 @@
                                 <img src="img/learn-svg/noun_data collection_2339813.svg" alt="">
                             </div>
                             <div class="service_info">
-                                <h4>Data collection (II)</h4>
+                                <h4>Secondary data</h4>
                                 <p>The capacity to collect additional information needed for an operation (e.g. rapid assessments) to complement existing secondary data.</p>
                             </div>
                         </div>
