--- a/assess.html
+++ b/assess.html
@@ -62,15 +62,7 @@
                                         </nav>
                                     </div>
                                 </div>
-                                <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                    <div class="Appointment justify-content-end">
-                                        <div class="search_btn">
-                                            <a data-toggle="modal" data-target="#exampleModalCenter" href="#">
-                                                <i class="ti-search"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
+
                                 <div class="col-12">
                                     <div class="mobile_menu d-block d-lg-none"></div>
                                 </div>
@@ -98,14 +90,13 @@
     <!--/ bradcam_area  -->
 
 
-    <br><br>
   	<section class="sample-text-area">
   		<div class="container box_1170">
   			<h3 class="text-heading">Assess your team</h3>
   			<p class="sample-text">
             The assessment and planning phase aims to help you move toward your data readiness goals. The data framework guides you through the main components
-            of data readiness humanitarian response and programs alongside a maturity matrix. Using this resource you can identify where your team
-            falls in terms of data readiness and gives you an idea of what it means to increase your capacity in those domains.
+            of data readiness in humanitarian response and programs alongside a maturity matrix. Using this resource, you can identify where your team
+            falls in terms of data readiness and learn what it means to increase your capacity in those domains.
 
         <br><br>
 
@@ -126,14 +117,14 @@
     <div class="section-top-border">
   				<div class="row">
   					<div class="col-md-3">
-  						<img src="img/use/noun_leadership_4199.svg" alt="" class="img-fluid">
+  						<img src="img/use/10516-009-2.jpg" alt="" class="img-fluid-circle">
   					</div>
   					<div class="col-md-9 mt-sm-20">
               <h4 class="mb-30">Identify your team</h3>
                 <p>Once you have a sense of what is in the framework, the next step is to identify your team. Who should be included as part of the assessment will depend on your goals, but generally,
-                you'll want to think through work with a project team or department.
+                you'll want to identify a project team or department.
 
-                <p>It could be project-specific (e.g. a community surveillance project) or a team that regularly works with data (e.g. the cash assistance team). Make sure you include people responsible for the different components in the data readiness framework.</p>
+                <p>For example, you can identify a team working on a specific project (such as a community surveillance project) or a team/department that regularly works with data (such as the cash assistance team). Make sure you include people responsible for the different components in the data readiness framework.</p>
   					</div>
   				</div>
   			</div>
@@ -141,28 +132,28 @@
     <div class="section-top-border">
         <div class="row">
           <div class="col-md-3">
-            <img src="img/use/noun_Reporting_4207.svg" alt="" class="img-fluid">
+            <img src="img/use/12693-102-2.jpg" alt="" class="img-fluid-circle">
           </div>
           <div class="col-md-9 mt-sm-20">
             <h4 class="mb-30">Reflect and score</h3>
               <p>With your team, go through the framework and rate yourselves from 1 (does not exist) to 4 (high performance). Use the descriptions to rate yourselves as objectively as possible.
-                Often, you'll find you may belong in two categories. If this happens, choose the level that best represents your team most of the time.</p>
-              <p> As you score yourselves, make notes as to why you chose that level. This can help you in the planning phase as you prioritize which areas to work on.</p>
+                You may find belong in two categories; if this happens, choose the level that represents your team most of the time.</p>
+              <p> As you score yourselves, note why you chose that level. This can help you in the planning phase as you prioritize which areas to work on.</p>
         </div>
       </div>
 
     <div class="section-top-border">
         <div class="row">
           <div class="col-md-3">
-            <img src="img/use/noun_chart_4298.svg" alt="" class="img-fluid">
+            <img src="img/use/12398-071-2.jpg" alt="" class="img-fluid-circle">
           </div>
           <div class="col-md-9 mt-sm-20">
             <h4 class="mb-30">Review results and prioritize</h3>
-              <p> With your final scores, review your results and see where there may be areas of improvement. This stage takes a bit more thought and creativity -- which components are essential
-                for your project and/or department? Where is there the most room for improvement? Some additional things you may want to consider are broader organizational strategy, funding opportunities,
-                time constraints, and how transferable they are to other teams/departments.</p>
+              <p> Review your results and identify which areas you want to focus on. This stage takes a bit of thought and creativity -- which components are essential
+                to your project and/or department? Where is there the most room for improvement? Some additional things you may want to consider are broader organizational strategy, funding opportunities,
+                time constraints, and how transferable the competencies are to other teams/departments.</p>
 
-              <p>If you need additional help getting started, consider focusing on the priority components in the learn page.</p>
+              <p>If you need additional help getting started, consider focusing on the sample competencies in the learn page.</p>
 
           </div>
         </div>
