--- a/cases.html
+++ b/cases.html
@@ -61,15 +61,7 @@
                                         </nav>
                                     </div>
                                 </div>
-                                <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                    <div class="Appointment justify-content-end">
-                                        <div class="search_btn">
-                                            <a data-toggle="modal" data-target="#exampleModalCenter" href="#">
-                                                <i class="ti-search"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
+
                                 <div class="col-12">
                                     <div class="mobile_menu d-block d-lg-none"></div>
                                 </div>
@@ -105,6 +97,9 @@
                         <div class="about_image">
                             <img src="img/cases/cp3.jpg" alt="">
                         </div>
+                        <br><br>
+                        <p-footnote>Image from IFRC Video "Halting Ebola at the border of DR Congo and Uganda" (January 24, 2019). See link <a href="https://www.youtube.com/watch?v=TlgITRXb2Z0&feature=youtu.be">here</a>.</p-footnote>
+
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="features_info">
@@ -123,6 +118,8 @@
                             <div class="about_btn">
                                 <a href="https://media.ifrc.org/ifrc/community-epidemic-pandemic-preparedness/" class="genric-btn danger radius">Learn more</a>
                             </div>
+                            <br>
+
                         </div>
                     </div>
                 </div>
