--- a/learn.html
+++ b/learn.html
@@ -62,15 +62,7 @@
                                         </nav>
                                     </div>
                                 </div>
-                                <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                    <div class="Appointment justify-content-end">
-                                        <div class="search_btn">
-                                            <a data-toggle="modal" data-target="#exampleModalCenter" href="#">
-                                                <i class="ti-search"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
+
                                 <div class="col-12">
                                     <div class="mobile_menu d-block d-lg-none"></div>
                                 </div>
@@ -98,8 +90,6 @@
     <!--/ bradcam_area  -->
 
 
-
-    <br><br>
   	<section class="sample-text-area">
   		<div class="container box_1170">
   			<h3 class="text-heading">Intro Video</h3>
@@ -111,7 +101,6 @@
   		</div>
   	</section>
 
-    <br><br>
   	<section class="sample-text-area">
   		<div class="container box_1170">
   			<h3 class="text-heading">An overview of data readiness</h3>
@@ -169,12 +158,12 @@
 
     <section class="sample-text-area">
   		<div class="container box_1170">
-  			<h3 class="text-heading">Priority competencies</h3>
+  			<h3 class="text-heading">Sample competencies</h3>
   			<p class="sample-text">
           To meet the main objectives under data readiness, there are a number of competencies a team needs to have.
           These range everywhere from building a data culture, to having the right data collection tools, to making data-driven decisions.
   			</p>
-        <p>Explore the different competencies below.</p>
+        <p>Explore some of the different competencies below.</p>
   		</div>
   	</section>
 
@@ -232,8 +221,8 @@
           All the components and priority competencies are part of a broader Theory of Change (ToC) on data readiness for operations and planning.
           If you're interested, go ahead and review the ToC. You can use it as a reference for learning, strategy development, proposal writing, or anything else.
           <br><br>
-          <a href="https://drive.google.com/file/d/1ia5sY-J1FCr9EJHnK2nYL7fxENqiWo2W/view?usp=sharing" class="genric-btn danger radius" target="_blank">Go to ToC</a>
-        </p>
+          <a href="https://drive.google.com/file/d/1mDwV1_gwck3PGKCADD_5fAJ29beQLpG4/view?usp=sharing" class="genric-btn danger radius" target="_blank">Go to ToC</a>
+        </p><br>
 
       </div>
     </section>
